fix: change the gap to 0.5

--- a/packages/components/src/multi-select/MultiSelect.module.css
+++ b/packages/components/src/multi-select/MultiSelect.module.css
@@ -1,6 +1,12 @@
 @value tokens: "../theme/tokens.css";
 @value display, black, signalRed130, smBreakpoint, gray50, gray20, backgroundSecondary from tokens;
 
+.icon {
+  display: flex;
+  align-items: center;
+  transition: transform 0.3s ease;
+}
+
 .button {
   grid-area: Input;
   border: none;
@@ -64,12 +70,6 @@
   overflow-y: auto;
 }
 
-.icon {
-  display: flex;
-  align-items: center;
-  transition: transform 0.3s ease;
-}
-
 .listBoxItem {
   margin: auto;
   padding: 1rem;
@@ -80,7 +80,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: 0.5rem;
 
   &:hover {
     background-color: gray20;
